feat: summary card

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+  padding-block: 2rem;
+  max-width: var(--max-width);
   min-height: 100vh;
 }
